PSP/borradores/ae/servlets/world-cup-teams/src/main/java/org/example/worldcupteams/common/errors/TeamNotFoundException.java
package org.example.worldcupteams.common.errors;

public class TeamNotFoundException extends RuntimeException {
    public TeamNotFoundException(String message) {
        super(message);
    }
}

